@@ -1,16 +1,18 @@
 package org.checkerframework.framework.util;
 
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileReader;
 import java.io.IOException;
+import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -131,6 +133,7 @@ public class CheckerMain {
    * Construct all the relevant file locations and Java version given the path to this jar and a set
    * of directories in which to search for jars.
    */
+  @SuppressWarnings("this-escape")
   public CheckerMain(File checkerJar, List<String> args) {
 
     this.checkerJar = checkerJar;
@@ -224,7 +227,7 @@ public class CheckerMain {
   }
 
   /**
-   * Return the arguments that start with @ and therefore are files that contain javac arguments.
+   * Returns the arguments that start with @ and therefore are files that contain javac arguments.
    *
    * @param args a list of command-line arguments; is not modified
    * @return a List of files representing all arguments that started with @
@@ -287,7 +290,7 @@ public class CheckerMain {
    * groups to the returned list. Remove all matching args from the input args list.
    *
    * @param pattern a pattern with at least one matching group
-   * @param allowEmpties whether or not to add empty group(1) matches to the returned list
+   * @param allowEmpties if true, add empty group(1) matches to the returned list
    * @param args the arguments to extract from
    * @return a list of arguments from the first group that matched the pattern for each input args
    *     or the empty list if there were none
@@ -355,7 +358,7 @@ public class CheckerMain {
   }
 
   /**
-   * Return the last {@code -cp} or {@code -classpath} option. If no {@code -cp} or {@code
+   * Returns the last {@code -cp} or {@code -classpath} option. If no {@code -cp} or {@code
    * -classpath} arguments were present, then return the CLASSPATH environment variable (if set)
    * followed by the current directory.
    *
@@ -456,6 +459,8 @@ public class CheckerMain {
               "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
               "--add-exports",
               "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
               "--add-exports",
               "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
               "--add-exports",
@@ -570,7 +575,7 @@ public class CheckerMain {
     }
 
     // Actually invoke the compiler
-    return ExecUtil.execute(args.toArray(new String[args.size()]), System.out, System.err);
+    return ExecUtil.execute(args.toArray(new String[0]), System.out, System.err);
   }
 
   private static void outputArgumentsToFile(String outputFilename, List<String> args) {
@@ -581,8 +586,9 @@ public class CheckerMain {
         @SuppressWarnings("builder:required.method.not.called") // don't want to close System.out
         PrintWriter writer =
             (outputFilename.equals("-")
-                ? new PrintWriter(System.out)
-                : new PrintWriter(outputFilename, "UTF-8"));
+                ? new PrintWriter(
+                    new BufferedWriter(new OutputStreamWriter(System.out, StandardCharsets.UTF_8)))
+                : new PrintWriter(outputFilename, StandardCharsets.UTF_8));
         for (int i = 0; i < args.size(); i++) {
           String arg = args.get(i);
 
@@ -596,7 +602,8 @@ public class CheckerMain {
             // Read argfile and include its parameters in the output file.
             String inputFilename = arg.substring(1);
 
-            try (BufferedReader br = new BufferedReader(new FileReader(inputFilename))) {
+            try (BufferedReader br =
+                Files.newBufferedReader(Paths.get(inputFilename), StandardCharsets.UTF_8)) {
               String line;
               while ((line = br.readLine()) != null) {
                 writer.print(line);
@@ -654,7 +661,7 @@ public class CheckerMain {
   }
 
   /**
-   * Return all the lines in all the files.
+   * Returns all the lines in all the files.
    *
    * @param files a list of files
    * @return a list of all the lines in all the files
@@ -684,7 +691,7 @@ public class CheckerMain {
     }
     String name = cls.getName();
     String classFileName;
-    /* name is something like pakkage.name.ContainingClass$ClassName. We need to turn this into ContainingClass$ClassName.class. */
+    /* name is something like pakkage.name.EnclosingClass$ClassName. We need to turn this into EnclosingClass$ClassName.class. */
     {
       int idx = name.lastIndexOf('.');
       classFileName = (idx == -1 ? name : name.substring(idx + 1)) + ".class";
@@ -720,14 +727,9 @@ public class CheckerMain {
               + uri);
     }
 
-    try {
-      String fileName =
-          URLDecoder.decode(
-              uri.substring("jar:file:".length(), idx), Charset.defaultCharset().name());
-      return new File(fileName).getAbsolutePath();
-    } catch (UnsupportedEncodingException e) {
-      throw new BugInCF("Default charset doesn't exist. Your VM is borked.");
-    }
+    String fileName =
+        URLDecoder.decode(uri.substring("jar:file:".length(), idx), Charset.defaultCharset());
+    return new File(fileName).getAbsolutePath();
   }
 
   /**
@@ -777,9 +779,9 @@ public class CheckerMain {
     return str;
   }
 
-  ///////////////////////////////////////////////////////////////////////////
-  /// Shorthand checker names
-  ///
+  // ///////////////////////////////////////////////////////////////////////////
+  // Shorthand checker names
+  //
 
   /** Processor shorthand is enabled for processors in this directory in checker.jar. */
   protected static final String CHECKER_BASE_DIR_NAME = "org/checkerframework/checker/";
@@ -878,7 +880,7 @@ public class CheckerMain {
    *     processor
    * @param fullyQualifiedCheckerNames a list of fully-qualified checker names to match
    *     processorsString against
-   * @param allowSubcheckers whether to match against fully qualified checker names ending with
+   * @param allowSubcheckers if true, match against fully qualified checker names ending with
    *     "Subchecker"
    * @return processorsString where all shorthand references to Checker Framework built-in checkers
    *     are replaced with fully-qualified references
@@ -904,7 +906,7 @@ public class CheckerMain {
    *
    * @param processorName a processor name, possibly in shorthand
    * @param fullyQualifiedCheckerNames all checker names
-   * @param allowSubcheckers whether to match subcheckers as well as checkers
+   * @param allowSubcheckers if true, match subcheckers as well as checkers
    * @return the fully-qualified version of {@code processorName} in {@code
    *     fullyQualifiedCheckerNames}, or else {@code processorName} itself
    */
@@ -948,7 +950,7 @@ public class CheckerMain {
    * @param processorName a string identifying one processor
    * @param fullyQualifiedCheckerNames a list of fully-qualified checker names to match
    *     processorName against
-   * @param allowSubcheckers whether to match against fully qualified checker names ending with
+   * @param allowSubcheckers if true, match against fully qualified checker names ending with
    *     "Subchecker"
    * @return true if the shorthand processor name can be expanded to a checker in {@code
    *     fullyQualifiedCheckerNames}
